--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -1,3 +1,69 @@
+name: CI - Full
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch: {}
+
+jobs:
+  lint-test-build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run ESLint
+        run: npx eslint "src/**/*.{ts,tsx,js,jsx}" || true
+
+      - name: Run unit tests
+        run: npx vitest --run --reporter verbose 2>&1 | tee vitest.log || true
+
+      - name: Upload vitest log
+        uses: actions/upload-artifact@v4
+        with:
+          name: vitest-log
+          path: vitest.log
+
+      - name: Build
+        run: npm run build 2>&1 | tee build.log || true
+
+      - name: Upload build log
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-log
+          path: build.log
+
+  playwright-e2e:
+    runs-on: ubuntu-latest
+    needs: lint-test-build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: Install deps
+        run: npm ci
+      - name: Run Playwright tests
+        run: npx playwright test --reporter=list 2>&1 | tee playwright.log || true
+      - name: Upload Playwright logs
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-log
+          path: playwright.log
 name: CI Full
 
 on:
