--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss": "^8.5.6",
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^4.2.0",
+    "@tailwindcss/postcss": "^4.1.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.8",
     "vitest": "^1.5.3"
